--- a/Styles.css
+++ b/Styles.css
@@ -1,4 +1,81 @@
 header{
+    display: flex;
+    min-height: 80px;   
+    justify-content: space-between;
+    align-items: center; 
+    color: whitesmoke;
+    background-color:rgb(47, 81, 87);
+    padding: 0px 80px 0px 100px;
+}
+h1{    
+    color: rgb(127, 206, 144);
+}
+h2{
+    text-align: center;
+}
+a{
+    text-decoration: none;
     color: white;
-    background-color: black;
+}
+nav a:hover{ 
+    color: rgb(190, 85, 211);
+}
+nav a{
+    padding-right: 10px;
+}
+.logo{
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    padding: 20px 0px 20px 20px;    
+}
+.logo img{
+    height: 80%;
+    width: 80%;
+    margin-right: 345px;
+}
+.contenedor img{
+    height: 100%;
+    width: 100%;
+    padding-left: 20px;
+}
+button{
+    color: white;
+    background-color: brown;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.contenedor {
+    display: grid ;
+    gap: 1rem;
+    grid-auto-rows: 22rem;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); 
+
+}
+
+body{
+    background-color:rgb(46, 93, 99);
+    font-family: sans-serif;
+    margin: 0;
+}
+div.galeria{
+    margin: 10px 20px;
+}
+div.galeria:hover{
+    transform: rotate(-3deg);
+}
+
+div.galeria img{
+    width: 150px;
+    height: 150px;
+}
+  .footer{
+    display: flex;
+    min-height: 80px;   
+    justify-content: space-between; 
+    color: whitesmoke;
+    background-color:rgb(47, 81, 87);
+    padding: 0px 80px 0px 100px;   
 }
